--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.28.0",
+    "@types/cookie": "^0.6.0",
     "@types/express": "^5.0.2",
     "@types/node": "^22.15.29",
     "@types/socket.io": "^3.0.1",
