--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
   "devDependencies": {
     "@eslint/js": "^9.28.0",
     "@types/cookie": "^0.6.0",
+    "@types/cookie-parser": "^1.4.9",
     "@types/express": "^5.0.2",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^22.15.29",
     "@types/socket.io": "^3.0.1",
     "eslint": "^9.28.0",
