--- a/package.json
+++ b/package.json
@@ -5,20 +5,15 @@
   "main": "dist/app.js",
   "scripts": {
     "dev": "ts-node-dev --respawn --transpile-only src/app.ts",
-    "build": "npm install && tsc",
+    "build": "tsc",
     "start": "node dist/app.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
   "dependencies": {
     "bcryptjs": "^3.0.2",
     "body-parser": "^2.2.0",
     "cookie-parser": "^1.4.7",
-    "crypto": "^1.0.1",
     "dotenv": "^16.5.0",
-    "express": "^5.1.0",
+    "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "mailtrap": "^4.1.0",
     "mongodb": "^6.17.0",
@@ -29,7 +24,7 @@
     "@eslint/js": "^9.28.0",
     "@types/cookie": "^0.6.0",
     "@types/cookie-parser": "^1.4.9",
-    "@types/express": "^5.0.3",
+    "@types/express": "^4.17.17",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^22.15.29",
     "@types/socket.io": "^3.0.1",
