--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "mailtrap": "^4.1.0",
     "mongodb": "^6.17.0",
     "mongoose": "^8.15.0",
-    "socket.io": "^4.8.1"
+    "slugify": "^1.6.6",
+    "socket.io": "^4.8.1",
+    "transliteration": "^2.3.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.28.0",
